--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
 # Site settings
 title: De Geist boilerplate
-email: boilerplate@degeist.com
+email: erasmusdearos+miserere@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Donec id justo. Curabitur ullamcorper ultricies nisi. Aenean tellus metus, bibendum sed, posuere ac, mattis non, nunc
-twitter_description: In ut quam vitae odio lacinia tincidunt. Pellentesque posuere
-baseurl: /page # in development. For Github  ""
-url: "http://degeist.com/" # the base hostname & protocol for your site
-name: De Geist
-twitter_username: degeist
-facebook_username: facebook
+  Short film Miserere. Directed by Erasmus de Aros.
+twitter_description: Forgive, Highest, my sins
+baseurl: "" # in development. For Github  ""
+url: "http://miserere.xyz/" # the base hostname & protocol for your site
+name: "Erasmus de Aros"
 
 # Build settings
 markdown: redcarpet
