Update with trailer

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: De Geist boilerplate
+title: Miserere
 email: erasmusdearos+miserere@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Short film Miserere. Directed by Erasmus de Aros.
